[project]
name    = "tcpping"
version = "0.2.0"
authors = [
  { name="B3K7", email="B3K7@github.com" },
]
description = "A Python TCP Ping client"
#"BSD 2-clause"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Other Environment",
    # Indicate who your project is intended for
    "Intended Audience :: Customer Service",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Other Audience",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Communications ",
    "Topic :: Internet ",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: BSD License",
    # Specify the targets here.
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    'click',
    'isodate',
]
keywords=["TCP", "PING", "TCP PING"]

[project.urls]
Documentation = "https://readthedocs.org"
Repository    = "https://github.com/B3K7/tcpping.git"
Issues        = "https://github.com/B3K7/tcpping/issues"
Changelog     = "https://github.com/B3K7/tcpping/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = [
  "src"
]
testpaths = [
    "tests"
]

[project.scripts]
tcpping = "tcpping.tcpping:tcpping"
